--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  color: black;
+  font-family: "Courier New", Courier, monospace;
+  color: purple;
 }
